2005-03-15  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h: changed type of procdata->memxserver as libwnck's uses
	an unsigned long not a guint64.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/infoview.c: (infoview_create), (infoview_update):
	* src/infoview.h:
	* src/interface.c: (create_proc_view), (toggle_infoview),
	(update_sensitivity):
	* src/procman.c: (procman_data_new):
	* src/procman.h: Moved a bunch of global variables from infoview.c
	to procdata->infoview.*.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/infoview.c:
	* src/interface.c: (make_title_label):
	* src/interface.h: Merged multiple make_title_label().
	Fixed float constants.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/infoview.c: (infoview_toggle_button_get_msg):
	* src/infoview.h:
	* src/interface.c: (create_proc_view), (toggle_infoview):
	* src/procman.c: (main): Fixed More/Less info state.
	Closes #170141.
	
	Merged some strings.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: (create_sys_view):
	* src/openfiles.c: (compare_open_files): don't use C++-style comments.
	Patch by jensgr@gmx.net (Jens Granseuer).

2005-03-12  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procactions.c: (renice_single_process), (renice),
	(kill_single_process), (kill_process):
	* src/procdialogs.c: (procdialog_create_root_password_dialog):
	* src/procdialogs.h:
	* src/proctable.h: Started rework the renice/kill actions.
	Removed 1 global variable.
	Better error handling if renice/kill fails.

2005-03-11  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procactions.c: (renice_single_process),
	(kill_single_process):
	* src/procdialogs.c: (procman_get_gnomesu_exec),
	(procdialog_create_root_password_dialog):
	* src/procdialogs.h: Look for libgnomesu only once. Removed unused
	messages.

2005-03-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (change_gconf_color), (cb_cpu_color_changed),
	(cb_mem_color_changed), (cb_swap_color_changed),