@@ -36,6 +36,7 @@ enum
 	COL_MEMRSS,
 	COL_MEMXSERVER,
 	COL_CPU,
+	COL_CPU_TIME,
 	COL_NICE,
 	COL_PID,
 	COL_SECURITYCONTEXT,
